Source/WebCore/thirdparty/glu/gluos.h
@@ -42,7 +42,4 @@ typedef unsigned int GLenum;
 typedef float GLfloat;
 typedef void GLvoid;
 
-#undef MIN
-#undef MAX
-
 #endif  // GLUOS_H_
