Source/WebCore/thirdparty/glu/libtess/priorityq.c
@@ -92,7 +92,7 @@ void pqDeletePriorityQ( PriorityQ *pq )
 
 #define LT(x,y)		(! LEQ(y,x))
 #define GT(x,y)		(! LEQ(x,y))
-#define Swap(a,b)	do{PQkey *tmp = *a; *a = *b; *b = tmp;}while(0)
+#define Swap(a,b)	if(1){PQkey *tmp = *a; *a = *b; *b = tmp;}else
 
 /* really __gl_pqSortInit */
 int pqInit( PriorityQ *pq )
