third_party/WebKit/Source/WebCore/platform/graphics/chromium/GLES2Canvas.h
@@ -49,7 +49,6 @@ class Color;
 class DrawingBuffer;
 class FloatRect;
 class GraphicsContext3D;
-class Path;
 class SharedGraphicsContext3D;
 
 class GLES2Canvas : public Noncopyable {
@@ -57,7 +56,6 @@ public:
     GLES2Canvas(SharedGraphicsContext3D*, DrawingBuffer*, const IntSize&);
     ~GLES2Canvas();
 
-    void fillPath(const Path&);
     void fillRect(const FloatRect&, const Color&, ColorSpace);
     void fillRect(const FloatRect&);
     void clearRect(const FloatRect&);
@@ -68,8 +66,6 @@ public:
     void rotate(float angleInRadians);
     void scale(const FloatSize&);
     void concatCTM(const AffineTransform&);
-    void clipPath(const Path&);
-    void clipOut(const Path&);
 
     void save();
     void restore();
@@ -77,13 +73,9 @@ public:
     // non-standard functions
     // These are not standard GraphicsContext functions, and should be pushed
     // down into a PlatformContextGLES2 at some point.
-
-    // This version is called by the canvas->canvas draws.
     void drawTexturedRect(unsigned texture, const IntSize& textureSize, const FloatRect& srcRect, const FloatRect& dstRect, ColorSpace, CompositeOperator);
-    // This version is called by BitmapImage::draw().
+    void drawTexturedRect(Texture*, const FloatRect& srcRect, const FloatRect& dstRect, const AffineTransform&, float alpha, ColorSpace, CompositeOperator);
     void drawTexturedRect(Texture*, const FloatRect& srcRect, const FloatRect& dstRect, ColorSpace, CompositeOperator);
-    // This version is called by the above, and by the software->hardware uploads.
-    void drawTexturedRect(Texture*, const FloatRect& srcRect, const FloatRect& dstRect, const AffineTransform&, float alpha, ColorSpace, CompositeOperator, bool clip);
     Texture* createTexture(NativeImagePtr, Texture::Format, int width, int height);
     Texture* getTexture(NativeImagePtr);
 
@@ -97,10 +89,6 @@ private:
     void drawTexturedRectTile(Texture* texture, int tile, const FloatRect& srcRect, const FloatRect& dstRect, const AffineTransform&, float alpha);
     void drawQuad(const IntSize& textureSize, const FloatRect& srcRect, const FloatRect& dstRect, const AffineTransform&, float alpha);
     void applyCompositeOperator(CompositeOperator);
-    void createVertexBufferFromPath(const Path&, int* count, unsigned* vertexBuffer, unsigned* indexBuffer);
-    void fillPath(const Path&, const Color&);
-    void beginStencilDraw();
-    void applyClipping(bool enable);
     void checkGLError(const char* header);
 
     IntSize m_size;
@@ -109,8 +97,7 @@ private:
     DrawingBuffer* m_drawingBuffer;
 
     struct State;
-    typedef WTF::Vector<State> StateVector;
-    StateVector m_stateStack;
+    WTF::Vector<State> m_stateStack;
     State* m_state;
     AffineTransform m_flipMatrix;
 };
