third_party/WebKit/Source/WebCore/platform/graphics/gpu/SharedGraphicsContext3D.h
@@ -91,7 +91,6 @@ public:
 
     // Shared logic for canvas 2d
     void applyCompositeOperator(CompositeOperator);
-    void enableStencil(bool enable);
     void useQuadVertices();
 
     void useFillSolidProgram(const AffineTransform&, const Color&);
